# src/controllers/AuthController/authType.ts
@@ -3,7 +3,6 @@ import bcrypt from 'bcryptjs';
 import {v4 as uuid} from 'uuid';
 
 export interface ISignUp {
-    id:string;
     name: string | undefined;
     surname: string | undefined;
     email: string | undefined;
@@ -11,8 +10,5 @@ export interface ISignUp {
 }
 
 export const getDataSignUp = async (req: Request): Promise<ISignUp|undefined> => {
-  if (!req.body.password) {
-    return undefined;
-  }
-  return {id: uuid(), name: req.body.name, surname: req.body.surname, email: req.body.email, password: bcrypt.hashSync(req.body.password)};
+  return {name: req.body.name, surname: req.body.surname, email: req.body.email, password: req.body.password};
 };
